# langchain-asi-integration

./: .gitignore  README.md  pytest.ini  test_direct_replacement.py
asi_evidence/: basic_chat.json  json_mode.json  parallel_tool_calls.json  structured_output.json  summary.json  tool_calling.json
docs/: openai_compatibility_adapter.md
examples/: advanced_chat_example.py  advanced_tool_usage.py  asi_advanced_features_fix.py  asi_tool_call_fix.py  basic_chat_example.py  basic_usage.py  chat_examples.py  complex_tool_types.py  comprehensive_features_demo.py  custom_advanced_features.py  financial_analysis_example.py  patch_langchain.py  retry_mechanism_tests.py  simple_adapter_example.py  simple_advanced_test.py  simple_financial_advisor.py  simple_langgraph_example.py  travel_assistant.py  trip_planner.py
langchain-asi/: README.md  pyproject.toml  requirements.txt  setup.py
langchain-asi/examples/: simple_financial_advisor.py
langchain-asi/examples/langgraph_example/utils/: __init__.py  helpers.py
langchain-asi/langchain_asi/: output_parsers.py  utils.py
langchain-asi/tests/: test_memory_integration.py  test_output_parsers.py
langchain_asi/: __init__.py  chat_models.py  openai_adapter.py
random_experiments/: asi_compatibility_test.py  asi_detailed_structured_output_test.py  asi_detailed_tool_calling_test.py  comprehensive_testing.py  debug_agent.py  fixed_create_chat_result.py  fixed_method.py  run_integration_tests.py  setup.py  test_asi_agent.py  test_asi_evidence.py  test_asi_integration.py  test_asi_langchain.py  test_asi_tools.py  test_bind_tools.py  test_chat_asi.py  test_enhanced_asi.py  test_groq_tool_calling.py  test_json_mode.py  test_openai_adapter_simple.py  test_raw_api.py  test_structured_output.py  test_supervisor.py  test_tool_calling.py  test_tool_format.py
responses/: adapter_test_20250324_095240.json  (+6 more)
tests/: __init__.py  (+3 more)
(+68 files in other folders)
